@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkEvent.c,v 1.17.2.4 2004/07/21 04:27:55 wolfsuit Exp $
+ * RCS: @(#) $Id: tkEvent.c,v 1.17.2.5 2004/07/29 21:47:57 dgp Exp $
  */
 
 #include "tkPort.h"
@@ -883,7 +883,6 @@ Tk_HandleEvent(eventPtr)
     dispPtr = winPtr->dispPtr;
     if ((dispPtr->flags & TK_DISPLAY_USE_IM)) {
 	if (!(winPtr->flags & (TK_CHECKED_IC|TK_ALREADY_DEAD))) {
-	    long im_event_mask = 0L;
 	    winPtr->flags |= TK_CHECKED_IC;
 	    if (dispPtr->inputMethod != NULL) {
 #if TK_XIM_SPOT
@@ -936,15 +935,6 @@ Tk_HandleEvent(eventPtr)
 			XNFocusWindow, winPtr->window,
 			NULL);
 #endif
-	    }
-	    if (winPtr->inputContext != NULL) {
-		XGetICValues(winPtr->inputContext,
-			XNFilterEvents, &im_event_mask, NULL);
-		if (im_event_mask != 0L) {
-		    XSelectInput(winPtr->display, winPtr->window,
-		    winPtr->atts.event_mask | im_event_mask);
-		    XSetICFocus(winPtr->inputContext);
-		}
 	    }
 	}
 	if (XFilterEvent(eventPtr, None)) {
